# opendungeon

./: .env.example  .fallowrc.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  package.json  tsconfig.json
.changeset/: auto-merge-release-prs.md  boss-phase-aftermath.md  bright-portals-publish.md  clean-publish-trust.md  combat-balance-odds.md  coop-village-permissions.md  first-clear-loop.md  fix-local-multiplayer.md  fixes-start.md  floor-tactics.md  gameplay-ui-polish.md  gm-host-archive.md  gm-tool-validation.md  item-equipment-decisions.md  local-challenge-board.md  multiplayer-action-log.md  multiplayer-client-host-reconcile.md  multiplayer-command-envelope.md  multiplayer-duplicate-account-guard.md  multiplayer-gm-hosting.md  multiplayer-host-authority-state.md  multiplayer-host-command-results.md  quest-chain-outcomes.md  silver-audio-runtime.md  two-floor-first-arc.md  update-release-flow.md  village-calendar.md  village-crafting-recipes.md  website-curl-installer.md  website-lobby-supabase.md  website-sandbox-host-plan.md
.github/workflows/: npm-publish.yml  release.yml
assets/: THIRD_PARTY_NOTICES.md
assets/0x72/: SOURCE.txt
assets/dawngeon/: SOURCE.txt
python/: pyproject.toml
python/opendungeon_gym/: __init__.py  env.py
python/tests/: test_opendungeon_gym.py
scripts/: generate-opendungeon-assets.ts  install.sh  package-install-smoke.ts  package-release.ts  public-hygiene-check.ts  release-npm.ts  release-workflow-check.ts  render-package-manager-files.ts  sync-version.ts
src/: main.ts  version.ts
(+135 files in other folders)
