[project]
name = "opendungeon-gym"
version = "0.1.0"
description = "Optional Gymnasium wrapper for the OpenDungeon TypeScript headless environment."
requires-python = ">=3.10"
dependencies = [
  "gymnasium>=0.29",
  "numpy>=1.26",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
  "stable-baselines3>=2.3",
  "pufferlib>=2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
